Performed train-test split. Closes #3

--- a/project_notebook.ipynb
+++ b/project_notebook.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOsTFybu6cEsMS7cBVUMdQI",
+      "authorship_tag": "ABX9TyP8IyUMbZpCov0y4/FmOhQA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/samarakoon-ryan/resampling-unbalanced-datasets/blob/resampling/project_notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/samarakoon-ryan/resampling-unbalanced-datasets/blob/train-test-split/project_notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "hMGxy742r1kG"
       },
@@ -98,7 +98,7 @@
           "height": 300
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -394,7 +394,7 @@
           "height": 1000
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -942,7 +942,7 @@
           "height": 1000
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -974,7 +974,7 @@
           "height": 781
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1009,7 +1009,7 @@
       "metadata": {
         "id": "ohHmyTbAxY5t"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1036,7 +1036,74 @@
       "metadata": {
         "id": "i145aDVW3caK"
       },
-      "execution_count": 13,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Train/Test Split\n",
+        "\n",
+        "I used a 70/30 train/test split."
+      ],
+      "metadata": {
+        "id": "D9--DsjJ6nnz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Perform train/test split\n",
+        "target_col = 'class'\n",
+        "random_seed = 1234\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(detection.drop(columns=target_col), detection[target_col],\n",
+        "                                                    test_size=0.3, random_state=random_seed, stratify=detection[target_col])"
+      ],
+      "metadata": {
+        "id": "p02qjHvo6sYI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Check dimensions of X\n",
+        "# X Train\n",
+        "print('On X train: ')\n",
+        "print('X train dimensions: ', X_train.shape)\n",
+        "display(X_train.head())\n",
+        "\n",
+        "# X test\n",
+        "print('\\nOn X test: ')\n",
+        "print('X test dimensions: ', X_test.shape)\n",
+        "display(X_test.head())"
+      ],
+      "metadata": {
+        "id": "jFgESzl36vIQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Check dimensions of Y\n",
+        "# Y Train\n",
+        "print('On Y train: ')\n",
+        "print('Y train dimensions: ', y_train.shape)\n",
+        "display(y_train.head())\n",
+        "\n",
+        "# Y test\n",
+        "print('\\nOn Y test: ')\n",
+        "print('Y test dimensions: ', y_test.shape)\n",
+        "display(y_test.head())"
+      ],
+      "metadata": {
+        "id": "w6vEv3KR6xSO"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
