updated test size for resampling train/test split

--- a/project_notebook.ipynb
+++ b/project_notebook.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNmwAKiEUq3L/acrvet2VqR",
+      "authorship_tag": "ABX9TyNUHsquz/rkYZHYOnmCKk6Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/samarakoon-ryan/resampling-unbalanced-datasets/blob/business-metrics/project_notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/samarakoon-ryan/resampling-unbalanced-datasets/blob/main/project_notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "hMGxy742r1kG"
       },
@@ -98,7 +98,7 @@
           "height": 300
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -394,7 +394,7 @@
           "height": 1000
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -942,7 +942,7 @@
           "height": 1000
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -974,7 +974,7 @@
           "height": 781
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1009,7 +1009,7 @@
       "metadata": {
         "id": "ohHmyTbAxY5t"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1036,7 +1036,7 @@
       "metadata": {
         "id": "i145aDVW3caK"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1044,7 +1044,7 @@
       "source": [
         "## Train/Test Split\n",
         "\n",
-        "I used a 70/30 train/test split."
+        "I used a 70/30 train/test split on the original data and a 70/15 train/test split on the resampled data so that the test size is similar in size for the purposes of the performance metrics. "
       ],
       "metadata": {
         "id": "D9--DsjJ6nnz"
@@ -1063,7 +1063,7 @@
       "metadata": {
         "id": "p02qjHvo6sYI"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1074,12 +1074,12 @@
         "random_seed = 1234\n",
         "\n",
         "X_train_RS, X_test_RS, y_train_RS, y_test_RS = train_test_split(detection_upsampled.drop(columns=target_col), detection_upsampled[target_col],\n",
-        "                                                    test_size=0.3, random_state=random_seed, stratify=detection_upsampled[target_col])"
+        "                                                    train_size=0.70, test_size=0.15, random_state=random_seed, stratify=detection_upsampled[target_col])"
       ],
       "metadata": {
         "id": "XxWRK9ih8FCH"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1104,7 +1104,7 @@
           "height": 607
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1701,7 +1701,7 @@
           "height": 321
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1772,7 +1772,7 @@
           "height": 607
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2369,7 +2369,7 @@
           "height": 321
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2451,7 +2451,7 @@
       "metadata": {
         "id": "aPzMb9JN7vW_"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2473,7 +2473,7 @@
           "height": 227
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2560,7 +2560,7 @@
       "metadata": {
         "id": "v67D8d85BlZd"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2578,7 +2578,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2626,7 +2626,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2658,7 +2658,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2705,7 +2705,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2743,7 +2743,7 @@
           "height": 279
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2772,7 +2772,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2810,7 +2810,7 @@
           "height": 279
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
